# ooaip

./: main.py  pyproject.toml
VD_games/: engine.py
VD_games/scripts/: VD_brain_calc.py  VD_even.py  VD_gcd.py  VD_main.py  VD_prime.py  VD_progression.py  brain_calc.py
games_project_revenko/VD_games/scripts/: VD_main.py
