[project]
name = "ooaip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["games_project_revenko" ]

[project.scripts]
vd-games = "games_project_revenko.VD_games.scripts.VD_main:main"
