[project]
name = "games-project-revenko"
version = "0.1.1"
description = "VD Games Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]

[project.scripts]
VD-games = "VD_games.scripts.VD_main:main"
VD-even = "VD_games.scripts.VD_even:main"
VD-calc = "VD_games.scripts.brain_calc:main"
VD-gcd = "VD_games.scripts.VD_gcd:main"
